<resources>
    <string name="app_name">Readers</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="button">Button</string>
    <string name="rooms_type">Rooms type</string>
    <string name="home">Home</string>
    <string name="readers_icon">Readers Icon</string>
    <string name="rooms">Rooms</string>
    <string name="text_view">Text view</string>
    <string name="make_your_own_space_read_share_discuss_with_people_lets_fun_while_learning_new_knowledge_join_now">make your own space: read, share discuss with people lets fun while learning new knowledge, join now</string>
    <string name="editfile">editFile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete">delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_or_SignUp">Login or SignUp?</string>
    <string name="read_it_logo">Read it Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">confiorm password</string>
    <string name="i_accept_terms_and_conditions_of_the_readers">I accept Terms and Conditions of the Readers</string>
    <string name="Qlogin">Login?</string>
    <string name="hello_i_am_a_text">hello i am a text</string>
    <string name="start_new_room">Start New Room</string>
    <string name="decreptionToStartNewRoom">It seems like you want to add rooms to our community we are so exited! , please enter community name and add description to this room so we can filter our the room to add it to the right community, lets go!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_new_community">Add New community</string>
</resources>