<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.view.ProfileFavoriteRoom">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/userimage"
        android:src="@drawable/placeholder"
        android:layout_marginStart="222dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/editFile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:gravity="center"
        android:text="@string/text_view"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/recycle_favRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <Button
        android:id="@+id/editFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="edit profile"
        android:textColor="@color/white"
        android:background="#A484AB"
        android:backgroundTint="#000000"
        android:backgroundTintMode="src_over"
        android:textSize="11sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/recycle_favRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userimage"
        android:layout_marginStart="222dp"

        android:layout_marginEnd="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="200dp"
        android:gravity="start"
        android:text="@string/text_view"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@drawable/decription"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_favRooms" />

    <TextView
        android:id="@+id/titleOfRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="70dp"
        android:gravity="start"
        android:text="@string/title"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/decOfRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/decOfRoom"
        android:layout_width="212dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="30dp"
        android:gravity="start"
        android:text="@string/make_your_own_space_read_share_discuss_with_people_lets_fun_while_learning_new_knowledge_join_now"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_favRooms"
        app:layout_constraintVertical_bias="0.466" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="TODO"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_favRooms"
        app:layout_constraintVertical_bias="0.939" />
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_favRooms"
        android:layout_width="478dp"
        android:layout_height="246dp"
        android:background="@drawable/rectanglecenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/recycle_item_rooms">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>